# 20250718.agent-chat-analyze

./: .gitignore  CLAUDE.md  README.md  example_usage.py  pyproject.toml
.github/workflows/: test.yml
agent_chat_analyze/: __init__.py  cli.py
agent_chat_analyze/analyzers/: __init__.py  base.py  feedback_analyzer.py  workflow_analyzer.py
agent_chat_analyze/database/: __init__.py  connection.py  repository.py  schema.py
agent_chat_analyze/embeddings/: __init__.py  base.py  sentence_transformer.py  vector_search.py
agent_chat_analyze/models/: __init__.py  analysis.py  conversation.py  feedback.py
agent_chat_analyze/parsers/: __init__.py  base.py  claude_code.py
agent_chat_analyze/reporters/: __init__.py  base.py  markdown_reporter.py
docs/: design.md  requirements.md
tests/: __init__.py  test_analyzers.py  test_cli_basic.py  test_database.py  test_embeddings.py  test_embeddings_basic.py  test_models.py  test_parsers.py
