[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-chat-analyze"
version = "0.1.0"
description = "さまざまな AI エージェントとの対話内容を分析して新しい洞察を得るためのツール"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Developer", email = "developer@example.com"},
]
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
agent-chat-analyze = "agent_chat_analyze.cli:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=agent_chat_analyze --cov-report=term-missing"